<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngresarUsuario">

    <TextView
        android:id="@+id/title_signin"
        style="@style/Title"
        android:text="@string/signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_signin_user"
        style="@style/Input.User"
        android:layout_marginTop="150dp"
        android:hint="@string/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_signin"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView_no_account_question"
        style="@style/FormText"
        android:layout_marginTop="35dp"
        android:text="@string/no_account_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_signin_user" />

    <TextView
        android:id="@+id/textView_create_account_link"
        style="@style/FormText.Link"
        android:layout_marginStart="5dp"
        android:text="@string/create_account_link"
        app:layout_constraintStart_toEndOf="@+id/textView_no_account_question"
        app:layout_constraintTop_toBottomOf="@+id/editText_signin_user" />

    <Button
        android:id="@+id/button_signin_next"
        style="@style/Button.2"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>