<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearCuenta">

    <TextView
        android:id="@+id/title_create_account"
        style="@style/Title"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_signup_user"
        style="@style/Input.User"
        android:layout_marginTop="51dp"
        android:hint="@string/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_create_account"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editText_signup_password"
        style="@style/Input.Password"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_signup_user"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editText_signup_confirm_password"
        style="@style/Input.Password"
        android:layout_marginTop="30dp"
        android:hint="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_signup_password"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button_signup"
        style="@style/Button.2"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>