<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificarIdentidad">

    <TextView
        android:id="@+id/title_verify"
        style="@style/Title"
        android:text="@string/verify_identity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_verify_code"
        style="@style/FormText.Paragraph"
        android:layout_marginTop="35dp"
        android:text="@string/verify_code_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_verify" />

    <EditText
        android:id="@+id/editText_verify_code"
        style="@style/Input.Code"
        android:layout_marginTop="35dp"
        android:hint="@string/code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_verify_code"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button_verify_next"
        style="@style/Button.2"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>