<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewProjectActivity">

    <TextView
        android:id="@+id/text_view_project_name"
        style="@style/AppTheme.TextView"
        android:drawableStart="@drawable/ic_project_bookmark_red"
        android:text="@string/project_name_sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_project_client"
        style="@style/AppTheme.TextView"
        android:drawableStart="@drawable/ic_group"
        android:text="@string/project_client_sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_project_name" />

    <TextView
        android:id="@+id/text_view_project_description"
        style="@style/AppTheme.TextView"
        android:drawableStart="@drawable/ic_description"
        android:text="@string/project_desc_sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_project_client" />

    <TextView
        android:id="@+id/text_view_project_deadline"
        style="@style/AppTheme.TextView"
        android:drawableStart="@drawable/ic_date"
        android:text="@string/project_deadline_sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_project_description" />

</android.support.constraint.ConstraintLayout>