<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".RecoverAccount">

    <TextView
        android:id="@+id/title_recover"
        style="@style/LoginTheme.Title"
        android:text="@string/recover_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_view_recover_email"
        style="@style/LoginTheme.FormText.Paragraph"
        android:layout_marginTop="35dp"
        android:text="@string/recover_email_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_recover" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_recover_email"
        style="@style/LoginTheme.InputLayout"
        android:layout_marginTop="35dp"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_recover_email">

        <android.support.design.widget.TextInputEditText
            style="@style/LoginTheme.EditText.Email"
            android:hint="@string/email"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_recover_next"
        style="@style/CenteredButton.Bottom"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>